@@ -1,3 +1,5 @@
+ fix: error log reported failed close() for some publisher requests with large messages
+ fix: occasional memory leak during message deletion
  fix: worker messages intended for dead worker processes were not deleted
 0.691 (Feb. 2 2010)
  fix: server reload (via SIGHUP signal) was failing
